--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,11 +24,11 @@
             "error",
             "always"
         ],
-        "@typescript-eslint/no-explicit-any": [
-            "off"
-        ],
-        "@typescript-eslint/no-empty-function": [
-            "off"
-        ]
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "no-irregular-whitespace": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["warn", { "vars": "local", "args": "none", "caughtErrors": "none" }]
     }
 }
