--- a/.mocharc.json
+++ b/.mocharc.json
@@ -2,6 +2,6 @@
     "extension": ["ts"],
     "node-option": ["experimental-specifier-resolution=node", "loader=ts-node/esm"],
     "spec": [
-        "test/**/*.test.ts"
+        "test/message.test.ts"
     ]
 }
