--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mewbot",
-  "version": "1.0.4",
+  "version": "1.0.5-beta3",
   "description": "A library for building bots on Mew",
   "keywords": [
     "Mew",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
+    "@types/mime": "^3.0.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.6.1",
     "@types/ws": "^8.5.3",
@@ -45,7 +46,11 @@
   },
   "dependencies": {
     "@volcengine/openapi": "^1.2.3",
+    "form-data": "^4.0.0",
     "got": "^12.2.0",
+    "hpagent": "^1.1.0",
+    "image-size": "^1.0.2",
+    "mime": "^3.0.0",
     "ws": "^8.8.1"
   }
 }
